@@ -3,14 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.stratio</groupId>
+        <artifactId>parent</artifactId>
+        <version>0.5.0</version>
+    </parent>
     <properties>
         <stratio-test-bdd.version>0.2.0-SNAPSHOT</stratio-test-bdd.version>
-        <crossdata.version>1.1.0-SNAPSHOT</crossdata.version>
+        <crossdata.version>1.2.0-SNAPSHOT</crossdata.version>
         <assertj-core.version>1.7.0</assertj-core.version>
     </properties>
     <groupId>com.stratio.crossdata</groupId>
     <artifactId>tests</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.2.0-SNAPSHOT</version>
 
     <build>
         <plugins>
@@ -29,28 +34,26 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
-                <configuration>
+                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.17</version>
                 <executions>
                     <execution>
-                        <id>acceptance-test</id>
                         <phase>integration-test</phase>
                         <goals>
                             <goal>integration-test</goal>
+                            <goal>verify</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -68,10 +71,12 @@
                             <value>com.stratio.tests.utils.JaCoCoClient</value>
                         </property>
                     </properties>
-                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError
-                        -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.8.2/aspectjweaver-1.8.2.jar</argLine>
-                    <!-- <useSystemClassloader>true</useSystemClassloader> -->
-                </configuration>
+                    <argLine>-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.8.8/aspectjweaver-1.8.8.jar
+                        </argLine>
+                    <!--
+                                        -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.8.8/aspectjweaver-1.8.8.jar
+                    -->
+                    </configuration>
             </plugin>
         </plugins>
     </build>
